filter with updated struct
